# Discord_CTFtime_event

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
dockers/dev/: dockerfile
src/discord_ctftime/bot/: command.py  dashboard.py  group.py  main.py
src/discord_ctftime/bot/data/: events.db
src/discord_ctftime/ctftime/: __init__.py  ctftime.py
src/discord_ctftime/event/: __init__.py  engine.py  event.py
src/discord_ctftime/rss/: __init__.py  rss.py
src/discord_ctftime/utils/: __init__.py  time.py  utils.py
tests/test_discord_ctftime/event/: test_main.py
tests/test_discord_ctftime/rss/: test_rss.py
